<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.signin.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center_vertical|center|center_horizontal"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/headerConstraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/closeBtn"
                    android:layout_width="@dimen/sn_btn_close_width"
                    android:layout_height="@dimen/sn_btn_close_height"
                    android:background="@drawable/trans_corner_ripple"
                    android:contentDescription="@string/action_sign_in_short"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_close_24"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/headerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foregroundGravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/sn_header"
                    android:textColor="@color/black"
                    android:textSize="@dimen/base_header_txt_size"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/mainLogo"
                            android:layout_width="@dimen/logo_size"
                            android:layout_height="@dimen/logo_size"
                            android:contentDescription="@string/app_name"
                            app:srcCompat="@drawable/logo" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/authCard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/activity_horizontal_margin"
                            android:padding="@dimen/activity_horizontal_margin"
                            app:cardCornerRadius="@dimen/base_corner_sm">

                            <LinearLayout
                                android:id="@+id/authLayout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:padding="@dimen/activity_vertical_margin">

                                <LinearLayout
                                    android:id="@+id/usernameLayout"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="@dimen/base_gap"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:id="@+id/usernameTxt"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/sn_ip_username"
                                            android:textSize="@dimen/sn_lb_txt_size" />

                                        <TextView
                                            android:id="@+id/usernameEr"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginLeft="@dimen/base_gap"
                                            android:layout_weight="1"
                                            android:text="@string/sn_ip_username_er"
                                            android:textColor="@android:color/holo_red_light"
                                            android:textSize="10sp"
                                            android:visibility="gone" />
                                    </LinearLayout>

                                    <EditText
                                        android:id="@+id/usernameInp"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/trans_corner_ripple"
                                        android:ems="10"
                                        android:inputType="text"
                                        android:padding="@dimen/base_gap_md"
                                        android:textSize="@dimen/sn_lb_txt_size"
                                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/passwordLayout"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_marginTop="@dimen/activity_vertical_margin"
                                    android:orientation="vertical">

                                    <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="@dimen/base_gap"
                                        android:orientation="horizontal">

                                        <TextView
                                            android:id="@+id/passwordTxt"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/sn_ip_password"
                                            android:textSize="@dimen/sn_lb_txt_size" />

                                        <TextView
                                            android:id="@+id/passwordEr"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:layout_marginLeft="@dimen/base_gap"
                                            android:layout_weight="1"
                                            android:text="@string/sn_ip_username_er"
                                            android:textColor="@android:color/holo_red_light"
                                            android:textSize="10sp"
                                            android:visibility="gone" />

                                    </LinearLayout>

                                    <EditText
                                        android:id="@+id/passwordInp"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:background="@drawable/trans_corner_ripple"
                                        android:ems="10"
                                        android:inputType="textPassword"
                                        android:padding="@dimen/base_gap_md"
                                        android:textSize="@dimen/sn_lb_txt_size"
                                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                                </LinearLayout>

                                <androidx.appcompat.widget.AppCompatButton
                                    android:id="@+id/btnSignIn"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="@dimen/sn_btn_close_height"
                                    android:layout_marginBottom="@dimen/cardview_default_elevation"
                                    android:background="@drawable/base_yellow_corner_badge_ripple"
                                    android:gravity="center"
                                    android:minHeight="@dimen/btn_min_height"
                                    android:text="@string/sn_header"
                                    android:textSize="@dimen/sn_lb_txt_size" />
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_gap"
            android:text="@string/wl_app_name" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>